# yt-rater

./: .gitignore  LICENSE  README.md  pyproject.toml
src/yt_rater/: cli.py
src/yt_rater/core/: ai.py  cache.py  config.py  constants.py  exceptions.py  gemini.py  server.py  youtube.py
src/yt_rater/models/: rating_request.py  rating_response.py
tests/: test_cache.py  test_cli.py  test_config.py  test_server.py  test_youtube.py
